tdf#156165: Fix replace custom styles while typing

Originally, Replace Custom Styles changes styles to text body by entering BuiltText. Since styles change to text body is removed from BuiltTest, it is converted independently.

Now, conversion is applied even during typing because m_aFlags.bChgUserColl is true (its default value) during typing. Therefore, its default value is changed to false.

Change-Id: I8ce067b311922b5e1bdcd84036229c369b50a977
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154144
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit e26aeb882dd236adf19679d5df9b7ba5da1ed226)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155043
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit e50ec4d8ddca5dfe6a4f329298c0bae4edc5e41c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155188
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Patrick Luby <plubius@neooffice.org>
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>